# Witchgrid

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  version.hml
.github/workflows/: build.yml
agent/: .gitignore  README.md  agent.hml  capabilities.hml  engine_common.hml  hardware.hml  http_server.hml  intent.hml  llama_cpp.hml  models.hml  piper_cpp.hml  sd_cpp.hml  services.hml  transfers.hml  whisper_cpp.hml
cp/: .gitignore  README.md  cp.hml  dashboard.hml  embedded_assets.hml  gguf.hml  http_server.hml  inspect.hml  mcp.hml
dashboard/: bench.html  catalog.html  dashboard.js  deploy.html  index.html  profiles.html  settings.html  spawn_form.js  styles.css  transfers.html
docs/: flammen-as-first-consumer.md  llama-cpp-as-managed-runtime.md  operations.md  security.md  test-cases-todo.md
legacy-python/: README.md
legacy-python/src/witchgrid/cp/: api.py  db.py  routing.py  types.py
legacy-python/src/witchgrid/worker/: agent.py  hardware.py  services.py  templates.py
scripts/: embed_assets.sh  witchgrid-cp.service
spike-hemlock/: .gitignore  HEMLOCK_FEEDBACK.md  README.md  cp.hml  services.hml
src/witchgrid/: __main__.py  config.py  logger.py
src/witchgrid/cp/: api.py  app.py  db.py  types.py
src/witchgrid/worker/: agent.py  templates.py
tests/: README.md  capabilities_test.hml  gguf_test.hml  intent_test.hml  mcp_test.hml  run.hml  transfers_test.hml
tests/fixtures/: llama_help_enum_fa.txt  llama_help_legacy_fa.txt  make_gguf_fixtures.py  nemo_llama.gguf  normal_llama.gguf
tests/integration/: fake_llama_server.py  run_integration.sh
(+3 files in other folders)
